--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rumble = { git = "https://github.com/mwylde/rumble", branch = "master"}
-rand = "0.7.2"
-
-[build.env]
-passthrough = [
-    "RUST_BACKTRACE",
-    "RUST_LOG",
-    "RUST_DEBUG",
-]
+rumble = "0.3.0"
